--- a/Code/bm-webapp/src/main/webapp/CSS/Style.css
+++ b/Code/bm-webapp/src/main/webapp/CSS/Style.css
@@ -243,13 +243,27 @@ body
 }
 #content-table
 {
+        font: bold 11px "Trebuchet MS", Verdana, Arial, Helvetica,
+	sans-serif;
+	color: #6D929B;
+	border-right: 1px solid #C1DAD7;
+	border-bottom: 1px solid #C1DAD7;
+	border-top: 1px solid #C1DAD7;
+	letter-spacing: 2px;
+	text-transform: uppercase;
+	text-align: center;
+	padding: 6px 6px 6px 12px;
+	background: none;
 	width:100%;
 }
 #content-table td
 {
-	text-align:center;
-	padding:4px;
-	font-size:11pt;
+        border-right: 1px solid #C1DAD7;
+	border-bottom: 1px solid #C1DAD7;
+	background: #fff;
+	padding: 6px 6px 6px 12px;
+	color: #6D929B;
+	text-align:center;		
 }
 form label
 {
