--- a/Code/bm-webapp/src/main/webapp/modifyUser.vm
+++ b/Code/bm-webapp/src/main/webapp/modifyUser.vm
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<title>Modificar usuario - All In Time System</title>
+		<title>Modificar usuario - BUG MANAGER</title>
 		<link rel="stylesheet" href="CSS/Style.css" type="text/css" media="screen" />
 		<script type="text/javascript" src="./js/jquery-1.4.2.min.js"></script>
 		<script type="text/javascript" src="./js/jquery.validate.min.js"></script>
