--- a/Code/bm-webapp/src/main/webapp/newPasswordRequested.vm
+++ b/Code/bm-webapp/src/main/webapp/newPasswordRequested.vm
@@ -16,7 +16,7 @@
 *#<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Password Recovery - All In Time System</title>
+        <title>Recuperar password - BUG MANAGER</title>
         <link rel="stylesheet" href="CSS/Style.css" type="text/css" media="screen" />
     </head>
     <body>
