--- a/Code/bm-webapp/src/main/webapp/userLogin.vm
+++ b/Code/bm-webapp/src/main/webapp/userLogin.vm
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Login - All In Time System</title>
+        <title>Login - BUG MANAGER</title>
         <link rel="stylesheet" href="CSS/Style.css" type="text/css" media="screen" />
         <style type="text/css">
         #modalContainer {
