--- a/Code/bm-webapp/src/main/webapp/listProjects.vm
+++ b/Code/bm-webapp/src/main/webapp/listProjects.vm
@@ -5,11 +5,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Proyectos - BUG MANAGER</title>
         <link rel="stylesheet" href="CSS/Style.css" type="text/css" media="screen" />
-        <script>
+        <script type="text/javascript" src="./js/jquery-1.4.2.min.js"></script>
+        <script type="text/javascript" src="./js/jquery.validate.min.js"></script>
+        <script type="text/javascript" src="./js/localization/messages_es.js"></script>
+        <script type="text/javascript">
                 function goToUrl(url)
                 {
                         window.location = url;
-                }
+                }                
         </script>
     </head>
     <body>
