--- a/Code/bm-webapp/src/main/webapp/listTasks.vm
+++ b/Code/bm-webapp/src/main/webapp/listTasks.vm
@@ -5,7 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Tareas - BUG MANAGER</title>
         <link rel="stylesheet" href="CSS/Style.css" type="text/css" media="screen" />
-        <script>
+        <script type="text/javascript" src="./js/jquery-1.4.2.min.js"></script>
+        <script type="text/javascript" src="./js/jquery.validate.min.js"></script>
+        <script type="text/javascript" src="./js/localization/messages_es.js"></script>
+        <script type="text/javascript">
                 function goToUrl(url)
                 {
                         window.location = url;
