--- a/Code/bm-webapp/src/main/webapp/CSS/Style.css
+++ b/Code/bm-webapp/src/main/webapp/CSS/Style.css
@@ -10,11 +10,16 @@ body
 	min-width:900px;
 	background:#eaeaea;
 }
-
-#header
+#login-header
 {
 	height:125px;
-	overflow:hidden;        
+	overflow:visible;
+}
+#header
+{
+	height:137px;
+	overflow:hidden;
+        background-color: #cbcbcb;
 }
 #base-header-text
 {
@@ -25,10 +30,42 @@ body
 	margin-top:20px;
 	text-align:right;
 }
+#nav-bar
+{
+        padding: 0;        
+}
+#nav-bar li
+{
+        display: inline;
+}
+#nav-bar li a
+{
+        font-family: Arial;
+        font-size: 14px;
+        text-decoration: none;
+        letter-spacing: 1px;	
+        float:left;
+        padding: 10px;
+        background-color: #ef6666;
+        color: #fff;        
+}
+#nav-bar li a:hover
+{
+        background-color: #aa1111;
+        margin-top:-2px;
+        padding-bottom:12px;
+}
 #base-bmlogo
 {
-	margin-left:20px;
+	margin-left:10px;
 }
+#base-menu-bar
+{
+	margin-left:10px;
+	/*margin-right:21px;*/
+        width:100%;
+}
+/*
 #base-menu 
 {
 	margin:5px 0;
@@ -37,11 +74,6 @@ body
 	min-width:860px;
 	padding:0 30px;
 }
-#base-menu-bar
-{
-	margin-left:112px;
-	margin-right:21px;
-}
 #base-menu ul
 {
 	list-style:none;
@@ -49,19 +81,7 @@ body
 	padding:0;
 	height:40px;
 }
-#base-menu-center
-{
-	background-image:url('../images/Base/Menu2.png');
-	background-repeat:repeat;
-	overflow:hidden;
-	margin-left:0px;
-	margin-right:-1px;
-	padding-left:-5px;
-	width:100%;
-	min-width:731px;
-	position:relative;
-	z-index:2;
-}
+
 #base-menu li
 {
 	background-image:url('../images/Base/botonesMenu.png');
@@ -76,6 +96,7 @@ body
 	position:relative;
 	z-index:3 !important;
 }
+
 #base-menu li.Proyectos
 {
 	background-position:0 0;
@@ -145,6 +166,7 @@ body
 	margin-right:-20px;
 	margin-top:-40px;
 }
+*/
 #text-content
 {
         text-align:center;        
