--- a/Code/bm-webapp/src/main/webapp/listProjects.vm
+++ b/Code/bm-webapp/src/main/webapp/listProjects.vm
@@ -25,22 +25,24 @@
             </div>
             <div id="base-menu">
                 <div id="base-menu-bar">
-                    <img src="images/Base/Menu1.png" id="base-menu-left" />
-                    <div id="base-menu-center">
-                        <ul>
-                            <li class='ProyectosVisitando' onclick="goToUrl('listProjects.do')" >
-                            </li>
-                            <li class='Reportes' onclick="goToUrl('listReports.do')" >
-                            </li>
+                    <!--<img src="images/Base/Menu1.png" id="base-menu-left" />-->
+                    <!--<div id="base-menu-center">-->
+                        <ul id="nav-bar">
+                            <li><a href="listProjects.do">Proyectos</a></li>
+                            <li><a href="listReports.do">Reportes</a></li>
+                            <!--<li class='ProyectosVisitando' onclick="goToUrl('listProjects.do')" ></li>
+                            <li class='Reportes' onclick="goToUrl('listReports.do')" ></li>-->
                             #if($user.administrator)
-                            <li class='Usuarios' onclick="goToUrl('listUsers.do')" >
-                            </li>
+                            <li><a href="listUsers.do">Usuarios</a></li>
+                            <!--<li class='Usuarios' onclick="goToUrl('listUsers.do')" ></li>-->
                             #end
-                            <li onclick="goToUrl('listTemplates.do')">Plantillas</li>
-                            <li onclick="goToUrl('listDefectTypes.do')">Tipos de defecto</li>
+                            <li><a href="listTemplates.do">Plantillas</a></li>
+                            <li><a href="listDefectTypes.do">Tipos de defectos</a></li>
+                            <!--<li onclick="goToUrl('listTemplates.do')">Plantillas</li>
+                            <li onclick="goToUrl('listDefectTypes.do')">Tipos de defecto</li>-->
                         </ul>
-                    </div>
-                    <img src="images/Base/Menu3.png" id="base-menu-right" />
+                    <!--</div>-->
+                    <!--<img src="images/Base/Menu3.png" id="base-menu-right" />-->
                 </div>
             </div>
         </div>
