--- a/Code/bm-webapp/src/main/webapp/modifyDefectType.vm
+++ b/Code/bm-webapp/src/main/webapp/modifyDefectType.vm
@@ -27,26 +27,17 @@
 				Bienvenido, ${user.fullName}<br/>
 				<a href='userLogin.do?op=logout'>Salir</a>
 			</div>
-			<div id="base-menu">
-				<div id="base-menu-bar">
-					<img src="images/Base/Menu1.png" id="base-menu-left" />
-					<div id="base-menu-center">
-						<ul>
-							<li class='Proyectos' onclick="goToUrl('listProjects.do')" >
-							</li>
-                                                        <li class='Reportes' onclick="goToUrl('listReports.do')" >
-                                                        </li>
-                                                    #if($user.administrator)
-							<li class='UsuariosVisitando' onclick="goToUrl('listUsers.do')" >
-							</li>
-                                                    #end
-                                                        <li onclick="goToUrl('listTemplates.do')">Plantillas</li>
-                                                        <li onclick="goToUrl('listDefectTypes.do')">Tipos de defecto</li>
-						</ul>
-					</div>
-					<img src="images/Base/Menu3.png" id="base-menu-right" />
-				</div>
-			</div>
+			<div id="base-menu-bar">
+                            <ul id="nav-bar">
+                                <li><a href="listProjects.do">Proyectos</a></li>
+                                <li><a href="listReports.do">Reportes</a></li>
+                                #if($user.administrator)
+                                <li><a href="listUsers.do">Usuarios</a></li>
+                                #end
+                                <li><a href="listTemplates.do">Plantillas</a></li>
+                                <li><a href="listDefectTypes.do">Tipos de defectos</a></li>
+                            </ul>
+                        </div>
 		</div>
 		<div id="content"> <!--AQUI METER TODOS LOS INPUT, LABELS etc-->
                     <div id="defectType">
