--- a/Code/bm-webapp/src/main/webapp/modifyTemplate.vm
+++ b/Code/bm-webapp/src/main/webapp/modifyTemplate.vm
@@ -181,8 +181,7 @@
                                                 <tr>
                                                     <th>Categoria</th>
                                                     <th>Descripcion</th>
-                                                    <th></th>
-                                                    <th></th>
+                                                    <th colspan="2">Acciones</th>
                                                 </tr>
                                                 #foreach($e in $elements)
                                                 <tr>
